# openexr

./: .appveyor.yml  .bazelrc  .bazelversion  .clang-format  .git-blame-ignore-revs  .gitignore  .mailmap  .readthedocs.yml  BUILD.bazel  CHANGES.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CREDITS.md  Dockerfile  GOVERNANCE.md  INSTALL.md  LICENSE  LICENSE.md  MODULE.bazel  README  README.md  SECURITY.md  WORKSPACE.bazel  azure-pipelines.yml  conanfile.txt  openexr.keyring  pyproject.toml  sonar-project.properties  users
IlmBase/: AUTHORS  CMakeLists.txt  ChangeLog  Config.cmake.in  IlmBase.pc.cmake  IlmBase.pc.in  IlmBaseConfig.cmake.in  Makefile.am  NEWS  README  README.OSX  README.cmake.txt  README.md  README.win32  bootstrap  configure.ac
IlmBase/Half/: CMakeLists.txt  Makefile.am  half.cpp  half.h  halfExport.h  halfFunction.h
IlmBase/HalfTest/: CMakeLists.txt  Makefile.am  main.cpp  testArithmetic.cpp  testArithmetic.h  testBitPatterns.cpp  testBitPatterns.h  testClassification.cpp  testClassification.h  testError.cpp  testError.h  testFunction.cpp  testFunction.h  testLimits.cpp  testLimits.h  testSize.cpp  testSize.h  testToFloat.cpp  testToFloat.h
IlmBase/Iex/: CMakeLists.txt  IexBaseExc.cpp  IexBaseExc.h  IexErrnoExc.h  IexExport.h  IexForward.h  IexMacros.h  IexMathExc.h  IexNamespace.h  IexThrowErrnoExc.cpp  IexThrowErrnoExc.h  Makefile.am
IlmBase/IexMath/: CMakeLists.txt  IexMathExport.h  IexMathFloatExc.cpp  IexMathFloatExc.h  IexMathFpu.cpp  IexMathFpu.h  IexMathIeeeExc.h  Makefile.am
IlmBase/IexTest/: CMakeLists.txt  Makefile.am  testBaseExc.cpp
IlmBase/IlmThread/: CMakeLists.txt  IlmThread.cpp  IlmThread.h  IlmThreadExport.h  IlmThreadForward.h  IlmThreadMinGWThread.h  IlmThreadMutex.cpp  IlmThreadMutex.h  IlmThreadMutexPosix.cpp  IlmThreadMutexStd.cpp  IlmThreadMutexWin32.cpp  IlmThreadNamespace.h  IlmThreadPool.cpp  IlmThreadPool.h  IlmThreadPosix.cpp  IlmThreadSemaphore.cpp  IlmThreadSemaphore.h  IlmThreadSemaphoreOSX.cpp  IlmThreadSemaphorePosix.cpp  IlmThreadSemaphorePosixCompat.cpp  IlmThreadSemaphoreStdCompat.cpp  IlmThreadSemaphoreWin32.cpp  IlmThreadStd.cpp  IlmThreadWin32.cpp  Makefile.am  condition_variable_any2.h  jthread.h  mingw.condition_variable.h  mingw.future.h  mingw.mutex.h  mingw.shared_mutex.h  mingw.thread.h  stop_token.h
IlmBase/Imath/: CMakeLists.txt  ImathBox.h  ImathBoxAlgo.h  ImathColor.h  ImathColorAlgo.h  ImathEuler.h  ImathExc.cpp  ImathExc.h  ImathExport.h  ImathForward.h  ImathFrame.h  ImathFrustum.h  ImathFrustumTest.h  ImathFun.cpp  ImathFun.h  ImathGL.h  ImathHalfLimits.h  ImathInt64.h  ImathInterval.h  ImathLimits.h  ImathLine.h  ImathLineAlgo.h  ImathMath.h  ImathMatrix.h  ImathMatrixAlgo.cpp  ImathMatrixAlgo.h  ImathNamespace.h  ImathNoise.cpp  ImathNoise.h  ImathPlane.h  ImathPlatform.h  ImathQuat.h  ImathRandom.cpp  ImathRandom.h  ImathRoots.h  ImathShear.h  ImathSphere.h  ImathVec.cpp  ImathVec.h  ImathVecAlgo.h  (+1 more)
IlmBase/ImathTest/: CMakeLists.txt  Makefile.am  main.cpp  testBox.cpp  testBoxAlgo.cpp  testColor.cpp  testExtractEuler.cpp  testExtractSHRT.cpp  testFrustum.cpp  testFrustumTest.cpp  testFrustumTest.h  testFun.cpp  testInvert.cpp  testJacobiEigenSolver.cpp  testLineAlgo.cpp  testMatrix.cpp  testMiscMatrixAlgo.cpp  testProcrustes.cpp  testQuat.cpp  testQuatSetRotation.cpp  testQuatSlerp.cpp  testRandom.cpp  testRoots.cpp  testShear.cpp  testTinySVD.cpp  testVec.cpp
IlmBase/config/: CMakeLists.txt  IlmBaseConfig.h.in  IlmBaseConfig.h.in_cmake  IlmBaseConfigInternal.h.in  (+5 more)
IlmBase/config.windows/: IlmBaseConfig.h  IlmBaseConfig.h.in
OpenEXR/: .cproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  Config.cmake.in  Makefile.am  NEWS  OpenEXR.pc.cmake  OpenEXR.pc.in  OpenEXRConfig.cmake.in  PATENTS  README  README.CVS  README.OSX  README.cmake.txt  README.md  README.win32  ReleaseNotes  acinclude.m4  bootstrap  configure.ac  openexr.m4  openexr.spec.in
OpenEXR_Viewers/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.OSX  README.md  README.win32  bootstrap  configure.ac
PyIlmBase/: CMakeLists.txt  ChangeLog  Makefile  Makefile.am  PyIlmBase.pc.in  README  README.md  bootstrap  configure.ac
cmake/: CMakeLists.txt  FindIlmBase.cmake  FindNumPy.cmake  FindOpenEXR.cmake  FindSphinx.cmake  IexConfig.h.in  IexConfigInternal.h.in  IlmBase.pc.in  IlmBaseConfig.h.in  IlmBaseConfigInternal.h.in  IlmBaseSetup.cmake  IlmBaseVersion.cmake  IlmThreadConfig.h.in  JoinPaths.cmake  LibraryDefine.cmake  OpenEXR.pc.in  OpenEXRConfig.cmake.in  OpenEXRConfig.h.in  OpenEXRConfigInternal.h.in  OpenEXRLibraryDefine.cmake  OpenEXRSettings.cmake  OpenEXRSetup.cmake  OpenEXRVersion.cmake  SSE4-Win32.c  SSE4-Win32.cmake  SampleCTestScript.cmake  Toolchain-Linux-VFX_Platform15.cmake  Toolchain-mingw.cmake  clang-format.cmake  cmake_uninstall.cmake.in
docs/: API.rst  CMakeLists.txt  Doxyfile  Doxyfile.in  HelloWorld.rst  InterpretingDeepPixels.rst  MultiViewOpenEXR.rst  OpenEXRCoreAPI.rst  OpenEXRFileLayout.rst  PortingGuide.rst  ReadingAndWritingImageFiles.rst  StandardOptionalAttributes.rst  SymbolVisibility.md  SymbolVisibility.rst  TechnicalIntroduction.rst  TheoryDeepPixels.rst  about.html  about.rst  announcements.html  charter.rst  concepts.rst  conf.py  contributing.rst  documentation.html  documentation.rst  download.rst  downloads.html  faq.rst  governance.rst  headerScroll.js  headerScroll2.js  index.html  index.rst  install.rst  license.html  license.rst  links.html  mailinglist.html  news.rst  popUp.js  (+6 more)
website/: API.rst  CMakeLists.txt  DeepIDsSpecification.rst  HelloWorld.rst  InterpretingDeepPixels.rst  OpenEXRCoreAPI.rst  OpenEXRFileLayout.rst  PortingGuide.rst  ReadingAndWritingImageFiles.rst  SceneLinear.rst  StandardAttributes.rst  SymbolVisibility.rst  TechnicalIntroduction.rst  TheoryDeepPixels.rst  concepts.rst  conf.py  imageprocessing.dot  index.rst  install.rst  latest_news_title.rst  license.rst  news.rst  python.rst  requirements-lock.txt  requirements.txt  test_images.txt  toc_redirect.rst  tools.rst
(+2343 files in other folders)
